# adaptwms

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
adaptwms/: apps.py  translator.py  views.py
adaptwms/templates/: template.html
adaptwms/templates/pages/: interface.html
demo/: settings.py  urls.py
templates/pages/: interface.html
tests/: test_translator.py
